@@ -2,13 +2,13 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        0*H->L
-   StepA:    14542*L->H,    14542*H->L, Max High=12us Total High=67790us
+   StepA:    14992*L->H,    14992*H->L, Max High=12us Total High=69807us
    StepB:        0*L->H,        0*H->L, Max High=0us Total High=0us
 Position[A]=0
 
-Time in DirA  max=1224266 us, total=1224266 us
+Time in DirA  max=1209863 us, total=1209863 us
 
-Time in EnableA  max=376900 us, total=376900 us
+Time in EnableA  max=376913 us, total=376913 us
 
-Time in StepA  max=12 us, total=67790 us
+Time in StepA  max=12 us, total=69807 us
 
