@@ -2,13 +2,13 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        0*H->L
-   StepA:   103466*L->H,   103466*H->L, Max High=11us Total High=477730us
+   StepA:   105290*L->H,   105290*H->L, Max High=10us Total High=485640us
    StepB:        0*L->H,        0*H->L, Max High=0us Total High=0us
 Position[A]=0
 
-Time in DirA  max=1885345 us, total=1885345 us
+Time in DirA  max=1859575 us, total=1859575 us
 
-Time in EnableA  max=229445 us, total=229445 us
+Time in EnableA  max=241745 us, total=241745 us
 
-Time in StepA  max=11 us, total=477730 us
+Time in StepA  max=10 us, total=485640 us
 
